--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "devDependencies": {
         "eslint": "^5.12.0",
         "eslint-config-airbnb-base": "^13.1.0",
-        "eslint-plugin-import": "^2.14.0"
+        "eslint-plugin-import": "^2.14.0",
+        "js-yaml": ">=3.13.1"
     }
 }
